# learn-new

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.edge.yml  docker-compose.infra.yml  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  vibe coding-新领域学习agent.md
alembic/: env.py
app/: __init__.py  config.py  dashboard.py  db_schema.py  event_stream.py  knowledge.py  llm.py  main.py  models.py  orchestrator.py  runtime_health.py  runtime_ops.py  sandbox.py  secrets.py  session_store.py  task_queue.py  vector_store.py  web_fetch.py  workspace.py
config/: llm.production.yaml  llm.yaml
docs/: frontend-dashboard.md  llm-config.md
frontend/: README.md  admin.html  index.html  package-lock.json  package.json  user.html  vite.config.js
scripts/: backup.ps1  dev-frontend.ps1  dev-fullstack.ps1  dev.ps1  migrate.ps1  restore.ps1  test.ps1  verify-production.ps1
tests/: test_agents.py  test_api.py  test_artifacts.py  test_checkpoints.py  test_config_path_env.py  test_config_validation.py  test_curriculum_progress.py  test_dashboard.py  test_dev_scripts.py  test_encoding_cleanup.py  test_export.py  test_health_ops.py  test_intervention_mode.py  test_knowledge.py  test_knowledge_influence.py  test_llm.py  test_migrations_ops.py  test_observability.py  test_observability_ops.py  test_orchestrator.py  test_postgres_storage.py  test_postgres_task_queue.py  test_progress_monitoring.py  test_qdrant_knowledge.py  test_redis_rate_limit.py  test_review_flow.py  test_runtime_logging.py  test_sandbox.py  (+10 more)
(+50 files in other folders)
