[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-new"
version = "0.1.0"
description = "Adaptive teaching multi-agent MVP"
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "fastapi",
  "langgraph",
  "openai",
  "pydantic",
  "psycopg[binary]",
  "pyyaml",
  "redis",
  "sqlalchemy",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]
